Wed Mar  2 06:22:37 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
	* orbsvcs/orbsvcs/Naming/Naming_Server.h:

	  Changed to save the IOR file name instead of opening the IOR
	  file when parsing command line arguments.  This avoids a file
	  descriptor leak if multiple "-o" options are specified on the
	  command line.

Wed Mar  2 12:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/POA/DSI/client.cpp:
          Added extra debug line to see if the client gets an exception on the
          destroy_entry or on the shutdown method

Wed Mar  2 11:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Servant_Base.cpp:
          Removed debug statement that seems to be there just for testing and
          probably is forgotten to be removed

Wed Mar  2 11:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Collocated/Dynamic/Server_Task.cpp:
          Initialise pointer with 0.

        * tao/IFR_Client_Adapter.{h,cpp}:
          Removed not needed virtual destructor

        * tao/Messaging/diffs/Messaging.diff:
        * tao/Messaging/diffs/Messaging_No_Impl.diff:
          Updated

        * tao/PortableServer/PolicyS.cpp:
          Regenerated

Tue Mar  1 15:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CORBALOC_Parser.cpp:
          Use TAO::VMCID instead of TAO_DEFAULT_MINOR_CODE,
          TAO_DEFAULT_MINOR_CODE is deprecated and shouldn't be used

Tue Mar  1 15:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Valuetype/AbstractBase.{h,cpp}:
          Made the _tao_marshal_v a const method

Tue Mar  1 01:46:22 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_interface/amh_si.cpp:
	* TAO_IDL/be/be_visitor_operation/amh_ss.cpp:
	* tao/PortableServer/Servant_Base.cpp:

	  Fixed inconsistencies in AMH skeleton function parameter order.