@@ -1,3 +1,15 @@
+Wed Mar  2 06:30:32 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* orbsvcs/Concurrency_Service/Concurrency_Service.cpp:
+	* orbsvcs/Concurrency_Service/Concurrency_Service.h:
+
+          Added '-p' command line option to write process id to file.
+
+	  Changed to save the IOR file name instead of opening the IOR
+	  file when parsing command line arguments.  This avoids a file
+	  descriptor leak if multiple "-o" options are specified on the
+	  command line.
+
 Wed Mar  2 06:22:37 2005  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
